--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "repro-box",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^15.6.1",
-    "react-bootstrap": "^0.31.3",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "repro-box",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "react": "^15.6.1",
+        "react-bootstrap": "^0.31.3",
+        "react-dom": "^15.6.1",
+        "react-scripts": "1.0.13",
+        "react-video-players": "^0.1.7",
+        "youtube-api-search": "^0.0.5",
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    }
 }
